<resources>
    <string name="app_name">TDMoneyEd</string>
    <string name="title_activity_builder">BuilderActivity</string>
    <string name="action_home">Home</string>
    <string name="action_builder">Builder</string>
    <string name="action_summary">Summary</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_tutorial">Tutorial</string>
    <string name="section_format">Category: %1$d</string>

    <!-- Category College -->
    <string-array name="category_college">
        <item>Housing/Rent</item>
        <item>Tuition</item>
        <item>Books</item>
        <item>Class Fees</item>
        <item>Lab Fees</item>
        <item>Co-op Fees</item>
        <item>Locker</item>
        <item>Other</item>
    </string-array>

    <!-- Category Food -->
    <string-array name="category_food">
        <item>Groceries</item>
        <item>Coffee</item>
        <item>Snacks</item>
        <item>Dining Out</item>
        <item>Other</item>
    </string-array>

    <!-- Category Transportation -->
    <string-array name="category_transportation">
        <item>Car Payments</item>
        <item>Gas/Fuel</item>
        <item>Maintenance</item>
        <item>Repairs</item>
        <item>Insurance</item>
        <item>Parking</item>
        <item>Other</item>
    </string-array>

    <!-- Category Debt -->
    <string-array name="category_debt">
        <item>Credit Cards</item>
        <item>Student Loans</item>
        <item>Line of Credit</item>
        <item>Cash Advance</item>
        <item>Other</item>
    </string-array>

    <!-- Category Entertainment -->
    <string-array name="category_entertainment">
        <item>Cable/Internet</item>
        <item>Computer</item>
        <item>Movies/Events</item>
        <item>Music/Videos</item>
        <item>Hobbies</item>
        <item>Cell Phone</item>
        <item>Other</item>
    </string-array>

    <!-- Category Pets -->
    <string-array name="category_pets">
        <item>Food</item>
        <item>Treats</item>
        <item>Supplies</item>
        <item>Grooming</item>
        <item>Training</item>
        <item>Veterinarian</item>
        <item>Medication</item>
        <item>Other</item>
    </string-array>

    <!-- Category Personal -->
    <string-array name="category_personal">
        <item>Clothing</item>
        <item>Shoes</item>
        <item>Accessories</item>
        <item>Laundry</item>
        <item>Grooming</item>
        <item>Hygiene</item>
        <item>Gym</item>
        <item>Household</item>
        <item>Gifts</item>
        <item>Miscellaneous</item>
        <item>Other</item>
    </string-array>

    <!-- Category Totals -->
    <string-array name="category_totals">
        <item>Work</item>
        <item>Loans</item>
        <item>RSPs</item>
        <item>Bursary</item>
        <item>Family</item>
        <item>Other</item>
    </string-array>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
